add blog "node-pre-gyp 镜像设置"

--- a/themes/LeaveIt/layouts/partials/css.html
+++ b/themes/LeaveIt/layouts/partials/css.html
@@ -49,5 +49,13 @@
       background-color: #eee;
     }
 
+    .post-warp .post-content img {
+      max-width: 100%;
+    }
+
+    .post-warp .post-content figure {
+      margin-inline: 0;
+    }
+
   </style>
 
